test_next-20160128/20160128094534/build/defconfig/build_20160128094534_log.txt
test_build: Thu Jan 28 09:46:30 PST 2016: started on defconfig test_next-20160128 (888c8375131656144c1605071eab2eb6ac49abc3)
test_build: Thu Jan 28 09:46:30 PST 2016: serial is 20160128094534
In file included from include/linux/mm_types.h:15:0,
                 from include/linux/sched.h:27,
                 from ./arch/arm64/include/asm/compat.h:25,
                 from ./arch/arm64/include/asm/stat.h:23,
                 from include/linux/stat.h:5,
                 from include/linux/fs.h:9,
                 from include/linux/dax.h:4,
                 from mm/filemap.c:14:
mm/internal.h: In function ‘is_stack_mapping’:
./arch/arm64/include/asm/page.h:64:28: error: ‘READ_IMPLIES_EXEC’ undeclared (first use in this function)
  (((current->personality & READ_IMPLIES_EXEC) ? VM_EXEC : 0) | \
                            ^
include/linux/mm.h:200:32: note: in expansion of macro ‘VM_DATA_DEFAULT_FLAGS’
 #define VM_STACK_DEFAULT_FLAGS VM_DATA_DEFAULT_FLAGS
                                ^
include/linux/mm.h:206:40: note: in expansion of macro ‘VM_STACK_DEFAULT_FLAGS’
 #define VM_STACK_FLAGS (VM_GROWSDOWN | VM_STACK_DEFAULT_FLAGS | VM_ACCOUNT)
                                        ^
mm/internal.h:236:19: note: in expansion of macro ‘VM_STACK_FLAGS’
  return (flags & (VM_STACK_FLAGS & (VM_GROWSUP | VM_GROWSDOWN))) != 0;
                   ^
./arch/arm64/include/asm/page.h:64:28: note: each undeclared identifier is reported only once for each function it appears in
  (((current->personality & READ_IMPLIES_EXEC) ? VM_EXEC : 0) | \
                            ^
include/linux/mm.h:200:32: note: in expansion of macro ‘VM_DATA_DEFAULT_FLAGS’
 #define VM_STACK_DEFAULT_FLAGS VM_DATA_DEFAULT_FLAGS
                                ^
include/linux/mm.h:206:40: note: in expansion of macro ‘VM_STACK_DEFAULT_FLAGS’
 #define VM_STACK_FLAGS (VM_GROWSDOWN | VM_STACK_DEFAULT_FLAGS | VM_ACCOUNT)
                                        ^
mm/internal.h:236:19: note: in expansion of macro ‘VM_STACK_FLAGS’
  return (flags & (VM_STACK_FLAGS & (VM_GROWSUP | VM_GROWSDOWN))) != 0;
                   ^
mm/internal.h: In function ‘is_data_mapping’:
./arch/arm64/include/asm/page.h:64:28: error: ‘READ_IMPLIES_EXEC’ undeclared (first use in this function)
  (((current->personality & READ_IMPLIES_EXEC) ? VM_EXEC : 0) | \
                            ^
include/linux/mm.h:200:32: note: in expansion of macro ‘VM_DATA_DEFAULT_FLAGS’
 #define VM_STACK_DEFAULT_FLAGS VM_DATA_DEFAULT_FLAGS
                                ^
include/linux/mm.h:206:40: note: in expansion of macro ‘VM_STACK_DEFAULT_FLAGS’
 #define VM_STACK_FLAGS (VM_GROWSDOWN | VM_STACK_DEFAULT_FLAGS | VM_ACCOUNT)
                                        ^
mm/internal.h:241:20: note: in expansion of macro ‘VM_STACK_FLAGS’
  return (flags & ((VM_STACK_FLAGS & (VM_GROWSUP | VM_GROWSDOWN)) |
                    ^
make[1]: *** [mm/filemap.o] Error 1
make: *** [mm] Error 2
make: *** Waiting for unfinished jobs....
test_build: Thu Jan 28 09:46:57 PST 2016: FAILED on defconfig test_next-20160128
test_build: Thu Jan 28 09:46:57 PST 2016: ended on defconfig test_next-20160128
